--- a/projects/shell/src/app/home/home.component.html
+++ b/projects/shell/src/app/home/home.component.html
@@ -1,1 +1,8 @@
 <h1>Welcome!</h1>
+<p *ngIf="user$ | async as user">
+    User: {{user.name}}
+</p>
+<div>
+    <button (click)="login()" mat-flat-button color="primary">Login</button>
+    <app-log-test>Test</app-log-test>
+</div>
