--- a/projects/shell/src/app/app.component.html
+++ b/projects/shell/src/app/app.component.html
@@ -3,6 +3,13 @@
     <li><a routerLink="/">Home</a></li>
     <li><a routerLink="/flights/flights-search">Flights</a></li>
 </ul>
+<div style="text-align:center">
+      <h1>
+        Welcome to {{ title }}!
+      </h1>
+    </div>
+    <app-customer-view></app-customer-view>
+    <app-customer-add></app-customer-add>
 
 <router-outlet></router-outlet>
 
